fixing tarifs image cut on mobile

--- a/style.css
+++ b/style.css
@@ -74,8 +74,8 @@ body {
 
   #tarif-img {
     object-position: 40% 0% !important;
-    max-width: 150px !important;
-    max-height: 126px;
+    max-width: 133px !important;
+    max-height: 114px;
     transform: translate(-50%, -86%) rotate(0deg) !important;
   }
 
